Made buttons consistent and fixed layout issues

--- a/app/assets/stylesheets/pages/_log_in.scss
+++ b/app/assets/stylesheets/pages/_log_in.scss
@@ -2,6 +2,14 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 20px;
+  background-color: rgb(234, 112, 112);
+  border-color: rgb(234, 112, 112);
+}
+
+#log-in-btn:hover {
+  text-decoration: none;
+  background-color: rgb(234, 130, 112);
 }
 
 
