--- a/app/assets/stylesheets/pages/_sign_up.scss
+++ b/app/assets/stylesheets/pages/_sign_up.scss
@@ -18,13 +18,20 @@
   margin-right: auto;
   display: block;
   margin-bottom: 15px;
+  background-color: rgb(234, 112, 112);
+  border-color: rgb(234, 112, 112);
+}
+
+#sign-up-btn:hover {
+  text-decoration: none;
+  background-color: rgb(234, 130, 112);
 }
 
 .sign-up-page {
   background-image: linear-gradient(135deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.2) 50%), url('https://images.unsplash.com/photo-1495195134817-aeb325a55b65?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1355&q=80');
   background-size: cover;
   padding-bottom: 15px;
-  height: calc(100vh - 116px);
+  min-height: calc(100vh - 156px);
   text-align: center;
 }
  .my-container {
